# pmt_analysis

./: CMakeLists.txt  README.md  configure.sh
darkrate/: README.md  makePulseHist.cc  processPulses.sh  studythresold.cc
dbase/: Calibration_20200204.csv  ICARUS_PMT_placement.csv  ICARUS_cables_labels_v17.csv  OpDet-geometry-table.txt
gain/: README.md  calofilesDirect.txt  calofilesIndirect.txt  fitDirectLight.cc  makeHistDirect.cc  makeHistIndirect.cc
inc/: ChargeFit.h  CustomClasses_LinkDef.h  HighChargeFit.h  Pmt.h  Utils.h  Waveform.h
macro/: compare_noise.cc  fit_waveform.cc  loadLib.cc  load_pmt_tchain.cc  look_last_channel.cc  loss_of_power.cc  noise_ana.cc  plot_waveform.cc
scintillation/: findCoincidences.cc  fitScintillationSingle.cc  larResponse.cc
src/: #HighChargeFit.cc#  CMakeLists.txt  ChargeFit.cc  HighChargeFit.cc  Pmt.cc  Run.cc  Waveform.cc
